--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,6 @@
 @import 'ui/basic/table';
 @import 'ui/button';
 @import 'ui/typography';
-@import 'ui/fontSize';
 @import 'ui/rangeslider';
 @import 'ui/switcher';
 @import 'ui/spinner';
@@ -90,6 +89,7 @@
 @import 'states/text';
 @import 'states/padding';
 @import 'states/margin';
+@import 'states/fontSize';
 @import 'states/lineHeight';
 @import 'states/fontWeight';
 @import 'states/letterSpacing';
