--- a/assets/templates/appResume/basic/sections/buttons.html
+++ b/assets/templates/appResume/basic/sections/buttons.html
@@ -25,7 +25,7 @@
             <icon-pdf size="s" color="blue"></icon-pdf>
         </div>
     </div>
-    <div onClick={ parent.open.design.premium } onUpdate="none" class="control__buttons__item" data-balloon="Premium аккаунт" data-balloon-color="blue" data-balloon-size="medium" data-balloon-pos="down">
+    <div onClick={ parent.open.settings } onUpdate="none" class="control__buttons__item" data-balloon="Настройки" data-balloon-color="blue" data-balloon-size="medium" data-balloon-pos="down">
         <div class="control__buttons__item__icon">
             <icon-control size="s" color="blue"></icon-control>
         </div>
