--- a/assets/css/appResume/basic/ui/_checkbox.scss
+++ b/assets/css/appResume/basic/ui/_checkbox.scss
@@ -1,6 +1,6 @@
 .resumeBasic {
     .checkbox {
-        padding-left:50px;
+        @extend .pl50;
 
         &-control {
             @extend .w35;
@@ -10,11 +10,6 @@
             &:after {
                 @extend .w25;
                 @extend .h25;
-            }
-        }
-        input:checked ~ {
-            .checkbox-control {
-                box-shadow:inset 0 0 0 18px $blue;
             }
         }
     }
