--- a/assets/css/modules/_alert.scss
+++ b/assets/css/modules/_alert.scss
@@ -56,7 +56,7 @@
     &__title {
         @extend .c-blue;
         @extend .fontSize-34;
-        @extend .mb-s;
+        @extend .mb-m;
         @extend .plr-l;
 
         .d-phone & {
@@ -66,7 +66,8 @@
     }
     &__subtitle {
         @extend .c-gray;
-        @extend .fontSize-24;
+        @extend .fontSize-22;
+        @extend .fontWeight-3;
         @extend .plr-l;
     }
     &__buttons {
