--- a/assets/css/states/_transform.scss
+++ b/assets/css/states/_transform.scss
@@ -17,7 +17,7 @@
         transform:translate3d(0, 0, 0) scale(($i * 5) / 100);
     }
 }
-.scale-100-3d {
+.scale3d-100 {
     transform:translate3d(0, 0, 0) scale3d(1, 1, 1);
 }
 .scale-0 {
