--- a/assets/templates/appResume/basic/components/commons.html
+++ b/assets/templates/appResume/basic/components/commons.html
@@ -25,7 +25,7 @@
                     <ui-select update="currency" cursor={ $resume.select('salary') } items={ $store.currency.get() } size="xl" short></ui-select>
                 </div>
                 <div class="col-xs-24 col-sm-6">
-                    <ui-select update="worktime" cursor={ $resume.select('salary') } items={ $store.worktime.get() } size="xl"></ui-select>
+                    <ui-select update="worktime" cursor={ $resume.select('salary') } items={ $store.worktime.getItems() } size="xl"></ui-select>
                 </div>
             </div>
             <div class="row mb-l">
@@ -58,7 +58,7 @@
                     <ui-select update="day" cursor={ $resume.select('commons', 'birthday') } items={ _.range(1, 32) } size="xl"></ui-select>
                 </div>
                 <div class="col-xs-16 col-sm-6 xs-mb-m">
-                    <ui-select update="month" cursor={ $resume.select('commons', 'birthday') } items={ $store.month.get() } size="xl"></ui-select>
+                    <ui-select update="month" cursor={ $resume.select('commons', 'birthday') } items={ $store.month.getItems() } size="xl"></ui-select>
                 </div>
                 <div class="col-xs-24 col-sm-6">
                     <ui-select update="year" cursor={ $resume.select('commons', 'birthday') } items={ _.range(1940, new Date().getFullYear() + 1) } size="xl"></ui-select>
@@ -105,7 +105,7 @@
                     <span class="visible-sm c-gray fontSize-28">Телефон</span>
                 </div>
                 <div class="col-xs-24 col-sm-16">
-                    <ui-input update="phone" cursor={ $resume.select('commons', 'contacts') } size="xl"></ui-input>
+                    <ui-input mask="phone" update="phone" cursor={ $resume.select('commons', 'contacts') } size="xl"></ui-input>
                 </div>
             </div>
             <div class="row mb-m">
