--- a/assets/templates/appResume/basic/templates/template1.html
+++ b/assets/templates/appResume/basic/templates/template1.html
@@ -1,7 +1,7 @@
 <resume-basic-template1 id="t1">
 
 	<div id="t-header">
-		<div if={ $resume.get('commons', 'contacts', 'city') } id="t-header-city">г. { $resume.get('commons', 'contacts', 'city') }</div>
+		<div if={ $resume.get('commons', 'contacts', 'city') } id="t-header-city">{ $resume.get('commons', 'contacts', 'city') }</div>
 		<div id="t-header-names">
 			<div if={ $resume.get('commons', 'surname').length > $resume.get('commons', 'name').length }>
 				<div id="t-header-name" class="{ short : $resume.get('commons', 'name').length > 9 }">{ $resume.get('commons', 'name') }</div>
@@ -26,7 +26,7 @@
 	</div>
 	<div id="t-container-wrapper">
 		<div if={ $resume.get('education', 'items').length } class="t-container t-container-edu">
-			<div class="t-container-name">Образование</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Education") }</div>
 			<div each={ edu, i in $resume.take.education.items() } class="t-container-item">
 				<div class="t-container-dates">
 					<div class="t-container-dates-year t-gray">{ edu.year }</div>
@@ -35,7 +35,7 @@
 				<div if={ edu.level != 8 } class="t-container-desc">
 					<div class="t-container-desc-title">{ edu.title }</div>
 					<div if={ edu.faculty } class="t-container-desc-name">{ edu.faculty }</div>
-					<div if={ edu.speciality } class="t-container-desc-name">Специальность &ndash; { edu.speciality }</div>
+					<div if={ edu.speciality } class="t-container-desc-name">{ $i18n("resume.basic.template.Specialty") } &ndash; { edu.speciality }</div>
 				</div>
 				<div if={ edu.level == 8 } class="t-container-desc">
 					<div class="t-container-desc-title">{ edu.title }</div>
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 		<div class="t-container t-container-lang">
-			<div class="t-container-name">Владение языками</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Languages") }</div>
 			<div each={ lang, i in $resume.get('languages', 'items') } class="t-container-item">
 				<div class="t-container-dates">
 					<div class="t-container-dates-title { 't-gray' : lang.title != 'native' && lang.value == '1' }">{ $store.languages.getTitleById(lang.title) }</div>
@@ -59,14 +59,14 @@
 			</div>
 		</div>
 		<div if={ $resume.get('jobs', 'items').length } class="t-container t-container-job">
-			<div class="t-container-name">Место работы</div>
+			<div class="t-container-name">{ $i18n("resume.basic.template.Experience") }</div>
 			<div each={ job, i in $resume.take.jobs.items() } class="t-container-item">
 				<div class="t-container-dates">
 					<div class="t-container-dates-company"><span>{ job.company }</span></div>
 					<div class="t-container-dates-city">{ job.city }</div>
 					<div class="t-container-dates-period">
 						<div>{ $store.month.getTitleById(job.from.month) } { job.from.year } &mdash;</div>
-						<div if={ job.last }>по настоящее время</div>
+						<div if={ job.last }>{ $store.resume.get("lang") == "ru" ? 'по настоящее время' : 'until now' }</div>
 						<div if={ !job.last }>{ $store.month.getTitleById(job.to.month) } { job.to.year }</div>
 					</div>
 					<div class="t-container-dates-length">
@@ -82,7 +82,7 @@
 		<div if={ $resume.get('about').length } class="t-container t-container-about">
 			<div class="t-container-item">
 				<div class="t-container-dates">
-					<div class="t-container-dates-about">Достижения, о себе</div>
+					<div class="t-container-dates-about">{ $i18n("resume.basic.template.About me") }</div>
 				</div>
 				<div class="t-container-desc preline">
 				   { $resume.get('about') }
