--- a/public/css/sections/home/_functions.scss
+++ b/public/css/sections/home/_functions.scss
@@ -19,4 +19,11 @@
             margin-right:-25px;
         }
     }
+    .icon-pdf.icon-xl {
+        width:114px;
+        height:114px;
+        margin-top:-17px;
+        margin-bottom:-17px;
+        transform:translateY(14px);
+    }
 }
